# speech-enhancement-python

./: .gitignore  README.md  pyproject.toml  pyvenv.cfg  requirements.txt
commands/: bootstrap.sh  remove-python.sh  remove.cache.sh  reset.sh
src/common/: data_display.py  data_tools.py  prepare_data.py  properties.py  test_model.py  train_model.py  utils.py
src/config/: config.py
src/model_gan/: model_gan.py
src/model_unet/: model_unet.py
src/notebooks/: Pridictions for GAN Model.ipynb  Pridictions for UNET Model.ipynb
src/notebooks/train/: Train Google Colab Lab.ipynb
