[tool.poetry]
name = "speech enhancement"
version = "0.1.0"
description = "Speech echancement using deep learning models"
authors = ["Arvind <pingarvindforquestions@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "1.15.2"
librosa = "0.9.2"
numpy = "1.20.0"
scipy = "1.3.1"
protobuf = "==3.20.*"
matplotlib = "==3.4.*"
h5py = "2.10.0"
pydantic = "1.10.13"


[tool.poetry.group.dev.dependencies]
black = "==22.*"
ipykernel = "<=6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
